--- a/OnlineElectronicsStore/Views/Order/Index.cshtml
+++ b/OnlineElectronicsStore/Views/Order/Index.cshtml
@@ -223,7 +223,7 @@
 							<p>@item.Quantity шт</p>
 							<p class="price">@item.Price ₴</p>
 						</li>
-						price += item.Price;
+						price += item.Price * item.Quantity;
 					}
 				</ul>
 
