--- a/OnlineElectronicsStore/Views/Menu/Cart.cshtml
+++ b/OnlineElectronicsStore/Views/Menu/Cart.cshtml
@@ -152,29 +152,45 @@
         cursor: pointer;
     }
     
+    .order > a
+    {
+        color: white;
+    }
+    
+    .order > a:visited
+    {
+        color: white;
+    }
+    
+    .order > a:hover
+    {
+        color: white;
+    }
+    
     hr
     {
         width: 85%;
         margin-left: 5%;
     }
     
-    ul > a,
+    li > a,
     li button a
     {
         text-decoration: none;
-        color: white;
+        color: black;
     }
     
-    ul > a:visited,
+    li > a:visited,
     li button a:visited
     {
         text-decoration: none;
+        color: black;
     }
     
-    ul > a:hover,
+    li > a:hover,
     li button a:hover
     {
-        color: white;
+        color: black;
     }
 </style>
 
@@ -200,14 +216,18 @@
         <ul class="navigationLeft">
             <li id="activeLI"><i class="fa-solid fa-cart-shopping" id="activeI"></i>Корзина</li>
             <li><i class="fa-solid fa-user"></i>Особиста інформація</li>
-            <li><i class="fa-solid fa-list-ul"></i>Мої замовлення</li>
+            <li>
+                <a asp-controller="Menu" asp-action="Order">
+                    <i class="fa-solid fa-list-ul"></i>Мої замовлення
+                </a>
+            </li>
             <li><i class="fa-solid fa-heart"></i>Обране</li>
             <li><i class="fa-solid fa-comment"></i>Мої відгуки</li>
-            <a asp-controller="Account" asp-action="Logout">
-                <li>
+            <li>
+                <a asp-controller="Account" asp-action="Logout">
                     <i class="fa-solid fa-right-from-bracket" style="transform: rotate(180deg);"></i>Вихід
-                </li>
-            </a>
+                </a>
+            </li>
         </ul>
         <div class="contentMenu">
             <ul class="cartItem">
@@ -253,7 +273,7 @@
                         <p class="cartPrice">@item.Price ₴</p>
                     </li>
                     <hr/>
-                    price += @item.Price;
+                    price += @item.Price * @item.Quantity;
                 }
 
                 <li class="orderPlacement">
