--- a/OnlineElectronicsStore/Views/Menu/Cart.cshtml
+++ b/OnlineElectronicsStore/Views/Menu/Cart.cshtml
@@ -215,14 +215,22 @@
     <nav>
         <ul class="navigationLeft">
             <li id="activeLI"><i class="fa-solid fa-cart-shopping" id="activeI"></i>Корзина</li>
-            <li><i class="fa-solid fa-user"></i>Особиста інформація</li>
+            <li>
+                <a asp-controller="Menu" asp-action="PersonalInformation">
+                    <i class="fa-solid fa-user"></i>Особиста інформація
+                </a>
+            </li>
             <li>
                 <a asp-controller="Menu" asp-action="Order">
                     <i class="fa-solid fa-list-ul"></i>Мої замовлення
                 </a>
             </li>
             <li><i class="fa-solid fa-heart"></i>Обране</li>
-            <li><i class="fa-solid fa-comment"></i>Мої відгуки</li>
+            <li>
+                <a asp-controller="Menu" asp-action="Review">
+                    <i class="fa-solid fa-comment"></i>Мої відгуки
+                </a>
+            </li>
             <li>
                 <a asp-controller="Account" asp-action="Logout">
                     <i class="fa-solid fa-right-from-bracket" style="transform: rotate(180deg);"></i>Вихід
