--- a/OnlineElectronicsStore/Views/Shared/_CartPartialView.cshtml
+++ b/OnlineElectronicsStore/Views/Shared/_CartPartialView.cshtml
@@ -97,6 +97,23 @@
         border: 0;
         border-radius: 5px;
     }
+
+    .orderBtn > a
+    {
+        text-decoration: none;
+        color: white;
+    }
+
+    .orderBtn > a:visited
+    {
+        text-decoration: none;
+        color: white;
+    }
+
+    .orderBtn > a:hover
+    {
+        color: white;
+    }
 </style>
 
 <nav id="cartMenuContainer" >
@@ -132,7 +149,11 @@
                     price += item.Price * item.Quantity;
                 }
                 <p>@price ₴</p>
-                <button type="submit" class="orderBtn">Перейти до кошика</button>
+                <button type="submit" class="orderBtn">
+                    <a asp-controller="Menu" asp-action="Cart">
+                        Перейти до кошика
+                    </a>
+                </button>
             </li>
         </ul>
     </nav>
