--- a/OnlineElectronicsStore/Views/Menu/Review.cshtml
+++ b/OnlineElectronicsStore/Views/Menu/Review.cshtml
@@ -155,6 +155,14 @@
             <li id="activeLI">
                 <i class="fa-solid fa-comment" id="activeI"></i>Мої відгуки
             </li>
+            @if (User.IsInRole("Admin"))
+            {
+                <li>
+                    <a asp-controller="Menu" asp-action="CreateProduct">
+                        <i class="fa-solid fa-list-ul"></i>Додати товар
+                    </a>
+                </li>
+            }
             <li>
                 <a asp-controller="Account" asp-action="Logout">
                     <i class="fa-solid fa-right-from-bracket" style="transform: rotate(180deg);"></i>Вихід
