--- a/OnlineElectronicsStore/Views/Menu/PersonalInformation.cshtml
+++ b/OnlineElectronicsStore/Views/Menu/PersonalInformation.cshtml
@@ -132,9 +132,17 @@
                 </a>
             </li>
             <li><i class="fa-solid fa-heart"></i>Обране</li>
+            @if (User.IsInRole("Admin"))
+            {
+                <li>
+                    <a asp-controller="Menu" asp-action="CreateProduct">
+                        <i class="fa-solid fa-list-ul"></i>Додати товар
+                    </a>
+                </li>
+            }
             <li>
-                <a asp-controller="Menu" asp-action="Review">
-                    <i class="fa-solid fa-comment"></i>Мої відгуки
+                <a asp-controller="Menu" asp-action="CreateProduct">
+                    <i class="fa-solid fa-list-ul"></i>Додати товар
                 </a>
             </li>
             <li>
